--- a/CSS/estilo.css
+++ b/CSS/estilo.css
@@ -2,7 +2,7 @@ body{
     background-color: rgb(0, 50, 126);
 }
 .col{
-    background-color: white;
+    background-color: rgb(5, 5, 5);
 }
 .container{
     margin-top:20px;
